# physician-notetaker

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: medical_entities.json
data/processed/: ner_test.json  ner_train.json  ner_validation.json  sentiment_test.json  sentiment_train.json  sentiment_validation.json
data/test_cases/: anxious_patient.txt  multiple_diagnoses.txt
data/training/: intent_training_data.json  medical_conversations.json  ner_dataset_large.json  ner_training_data.json  sentiment_dataset_large.json  sentiment_training_data.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  QUESTIONS.md
models/medical_ner_model/: meta.json  metadata.json
models/medical_ner_model/ner/: model  moves
models/medical_ner_model/vocab/: strings.json
models/medical_sentiment_production/: config.json  metrics.json
notebooks/: demo.ipynb  ner_training.ipynb  production_training_pipeline.ipynb  sentiment_training_fixed.ipynb  train_medical_ner.ipynb  train_sentiment_bert.ipynb
src/: __init__.py  data_pipeline.py  keyword_extractor.py  medical_ner.py  pipeline.py  sentiment_analyzer.py  soap_generator.py  summarizer.py
