[project]
name = "physician-notetaker"
version = "1.0.0"
description = "AI-Powered Medical Transcription & NLP Analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Himanshu Sharma"}
]
keywords = ["medical", "nlp", "ai", "streamlit", "healthcare"]

[tool.streamlit]
python_version = "3.10"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
